Fixed theme being broken on some parts.

--- a/src/main.css
+++ b/src/main.css
@@ -70,6 +70,13 @@ Registered: Black Box Theme
   width: 24px !important;
 }
 
+.chatContent-3KubbW {
+    background-color: var(--primary-color);
+}
+.thin-31rlnD {
+    background-color: var(--primary-color);
+}
+
 /*
 ---------------------------------------------------------------------------------------------------------------------------------------------
 TROUBLESHOOTING: IF YOU NEED ANY HELP GO TO https://discord.gg/TeRQEPb
